# wgpu-project

./: Cargo.toml
registry/: Cargo.toml
registry/src/: lib.rs  texture.rs
res/: plane.mtl  sphere.mtl
reverie_editor/: Cargo.toml  imgui.ini  registry.yaml
reverie_editor/res/materials/: basic.revmat  brick.revmat  bricks_mortar.revmat  cube_brick.revmat  default.revmat  lee.revmat  rusted_iron.revmat  stainless_steel.revmat
reverie_editor/res/meshes/: cube.mtl  plane.mtl  sphere.mtl
reverie_editor/res/scenes/: first.revscene  test.revscene
reverie_editor/src/: app.rs  cursor.rs  egui.rs  main.rs  watcher.rs
reverie_editor/src/imgui/: explorer.rs  hierarchy.rs  mod.rs  viewport.rs
reverie_engine/: Cargo.toml
reverie_engine/shaders/: light.wgsl  pbr.wgsl  point_light_shadow.wgsl  shadow.wgsl  skybox.wgsl
reverie_engine/src/engine/: camera.rs  context.rs  gpu.rs  instance.rs  light_manager.rs  material.rs  mod.rs  model.rs  registry.rs  renderer.rs  resources.rs  scene.rs  skybox.rs  texture.rs  window.rs
reverie_engine/src/engine/asset/: material.rs  mod.rs  model.rs  texture_loader.rs
reverie_engine/src/engine/components/: light.rs  material.rs  mesh.rs  mod.rs  name.rs  parent.rs  transform.rs
reverie_engine/src/engine/scene/: light_manager.rs  mod.rs  skybox.rs
reverie_engine/src/util/: mod.rs
shaders/: basic.wgsl  light.wgsl  plane.wgsl  texture.wgsl
src/: lib.rs  main.rs
src/engine/: app.rs  camera.rs  camera_controller.rs  context.rs  ecs.rs  egui.rs  gpu.rs  handle.rs  input.rs  instance.rs  light.rs  light_manager.rs  material.rs  mod.rs  model.rs  plane.rs  registry.rs  render.rs  renderer.rs  renderpass.rs  resources.rs  state.rs  texture.rs  texture_manager.rs  ui.rs  uniform_pool.rs  vertex.rs  window.rs
src/engine/components/: material.rs  mesh.rs  mod.rs  renderable.rs  transform.rs
src/engine/primitives/: mod.rs
src/util/: mod.rs
