[package]
name = "wgpu-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14.2"
cgmath = "0.18.0"
env_logger = "0.10.0"
winit = "0.27.5"
anyhow = "1.0.68"
log = "0.4.17"
pollster = "0.2.5"
bytemuck = { version = "1.4", features = ["derive"] }
tobj = { version = "3.2.3", features = ["async"] }
instant = "0.1.12"
specs = { version = "0.18.0", features = ["derive"] }

[dependencies.image]
version = "0.24"
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0.68"
fs_extra = "1.2.0"
glob = "0.3.0"
