[package]
name = "reverie_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.15.1"
cg = { package = "cgmath", version = "0.18.0" }
env_logger = "0.10.0"
winit = { version = "0.27.2" }
anyhow = "1.0.68"
log = "0.4.17"
pollster = "0.3.0"
tobj = { version = "3.2.3", features = ["async"] }
instant = "0.1.12"
specs = { version = "0.18.0", features = ["derive"]}
imgui = { version = "0.11.0", features = ["docking"] }
once_cell = "1.17.1"

imgui_inspector = { path = "../imgui_inspector"}
imgui_inspector_derive = { path = "../imgui_inspector/imgui_inspector_derive"}

[dependencies.image]
version = "0.24"
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0.68"
fs_extra = "1.2.0"
glob = "0.3.0"
