[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.15.1"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
once_cell = "1.17.1"
anyhow = "1.0.68"

[dependencies.image]
version = "0.24"
features = ["png", "jpeg"]