[package]
name = "reverie_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reverie = { path = "../reverie_engine", package = "reverie_engine"}
wgpu = "0.15.1"
cg = { package = "cgmath", version = "0.18.0" }
pollster = "0.3.0"
anyhow = "1.0.68"
winit = { version = "0.27.2" }
specs = { version = "0.18.0", features = ["derive"]}
env_logger = "0.10.0"
instant = "0.1.12"
imgui = { version = "0.11.0", features = ["docking"] }
imgui-winit-support = "0.11.0"
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs" }
notify = "6.0.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"


imgui_inspector = { path = "../../imgui_inspector" }
imgui_inspector_derive = { path = "../../imgui_inspector/imgui_inspector_derive"}

[build-dependencies]
anyhow = "1.0.68"
fs_extra = "1.2.0"
glob = "0.3.0"

[dependencies.image]
version = "0.24"
features = ["png", "jpeg"]